tests/negative/test_data_nested.orb
data Foo {
    i32 val;
    Foo foo;
}

fnc main() {}